[gd_scene load_steps=12 format=3 uid="uid://b7udr7h54vi7h"]

[ext_resource type="Script" uid="uid://b4rgu4i8ny4l8" path="res://Scripts/Juego.gd" id="1_fl6nd"]
[ext_resource type="Texture2D" uid="uid://1ijf2kb0in76" path="res://Assets/Fondo.PNG" id="1_w4ft7"]
[ext_resource type="Theme" uid="uid://byv4e1cnjt6ge" path="res://Temas/Textos.tres" id="3_kcoml"]
[ext_resource type="Texture2D" uid="uid://c4kltyy1q6l2i" path="res://Assets/CReverso.png" id="4_o0pga"]
[ext_resource type="Texture2D" uid="uid://b3pb3e40yse0g" path="res://Assets/CPiedra.png" id="5_furlt"]
[ext_resource type="Texture2D" uid="uid://cmi737xxj6r5m" path="res://Assets/CPapel.png" id="6_lor7a"]
[ext_resource type="Theme" uid="uid://c74jhe44mnc8u" path="res://Temas/UI.tres" id="6_pbjfh"]
[ext_resource type="Texture2D" uid="uid://b46g36libkts4" path="res://Assets/CTijera.png" id="7_qvrkf"]

[sub_resource type="Animation" id="Animation_f6k3q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Piedra:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(376, 440)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Piedra:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Papel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(496, 440)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Tijera:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(616, 440)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Carta2:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Papel:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Tijera:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Carta:texture")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_o0pga")]
}

[sub_resource type="Animation" id="Animation_inru0"]
resource_name = "mov_cards"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Piedra:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(376, 440), Vector2(376, 576)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Piedra:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Papel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(496, 440), Vector2(496, 576)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Papel:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Tijera:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(616, 440), Vector2(616, 576)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Tijera:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w0php"]
_data = {
&"RESET": SubResource("Animation_f6k3q"),
&"mov_cards": SubResource("Animation_inru0")
}

[node name="Juego" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_fl6nd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_w0php")
}

[node name="Fondo" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 264)
scale = Vector2(11.6389, 11.6389)
texture = ExtResource("1_w4ft7")

[node name="Carta" type="Sprite2D" parent="."]
position = Vector2(864, 283.262)
scale = Vector2(5.8905, 5.8905)
texture = ExtResource("4_o0pga")

[node name="Carta2" type="Sprite2D" parent="."]
position = Vector2(256, 280)
scale = Vector2(5.8905, 5.8905)

[node name="Piedra" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 376.0
offset_top = 440.0
offset_right = 522.0
offset_bottom = 659.0
scale = Vector2(0.809256, 0.809256)
texture_normal = ExtResource("5_furlt")
stretch_mode = 5

[node name="Papel" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 496.0
offset_top = 440.0
offset_right = 642.0
offset_bottom = 660.0
scale = Vector2(0.809256, 0.809256)
texture_normal = ExtResource("6_lor7a")
stretch_mode = 5

[node name="Tijera" type="TextureButton" parent="."]
layout_mode = 2
offset_left = 616.0
offset_top = 440.0
offset_right = 762.0
offset_bottom = 659.0
scale = Vector2(0.809256, 0.809256)
texture_normal = ExtResource("7_qvrkf")
stretch_mode = 5

[node name="Puntos Jugador" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 48.0
offset_right = 308.0
offset_bottom = 88.0

[node name="Puntos" type="Label" parent="Puntos Jugador"]
layout_mode = 2
theme = ExtResource("3_kcoml")
text = "Puntos:"

[node name="NumPuntos" type="Label" parent="Puntos Jugador"]
layout_mode = 2
theme = ExtResource("3_kcoml")
text = "0"

[node name="Puntos Enemigo" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 800.0
offset_top = 48.0
offset_right = 932.0
offset_bottom = 88.0

[node name="Puntos" type="Label" parent="Puntos Enemigo"]
layout_mode = 2
theme = ExtResource("3_kcoml")
text = "Puntos:"

[node name="NumPuntos" type="Label" parent="Puntos Enemigo"]
layout_mode = 2
theme = ExtResource("3_kcoml")
text = "0"

[node name="Declaracion" type="Label" parent="."]
layout_mode = 0
offset_left = 448.0
offset_top = 136.0
offset_right = 640.0
offset_bottom = 162.0
theme = ExtResource("3_kcoml")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Reiniciar" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 472.0
offset_top = 312.0
offset_right = 616.0
offset_bottom = 333.0
theme = ExtResource("6_pbjfh")
text = "Reintentar"

[node name="Menu" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 456.0
offset_top = 376.0
offset_right = 632.0
offset_bottom = 418.0
theme = ExtResource("6_pbjfh")
text = "Volver al 
Men√∫"

[connection signal="mouse_entered" from="Piedra" to="." method="_on_piedra_mouse_entered"]
[connection signal="pressed" from="Piedra" to="." method="_on_piedra_pressed"]
[connection signal="pressed" from="Papel" to="." method="_on_papel_pressed"]
[connection signal="pressed" from="Tijera" to="." method="_on_tijera_pressed"]
[connection signal="pressed" from="Reiniciar" to="." method="_on_reiniciar_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_menu_pressed"]
